Fixed bug where items in cart are aligned to the right, not centered

--- a/src/app/modules/users/components/cart/my-order/my-order.component.css
+++ b/src/app/modules/users/components/cart/my-order/my-order.component.css
@@ -61,6 +61,7 @@
   position: fixed;
   bottom: 0px;
   margin-bottom: 53px;
+  left: 0;
 }
 
 .bold {
